Tag 3.5.19+b.1